[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std", "backtrace"] }
clap = { version = "4.5.4", default-features = false, features = ["derive", "std"] }
quinn = { version = "0.11.0", default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
rcgen = { version = "0.13.1" }
rustls = { version = "0.23.7", default-features = true, features = ["std"] }
rustls-pemfile = { version = "2.1.2" }
thiserror = { version = "1.0.61", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "tracing", "rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
spork-server = { path = "../spork-server" }
regex = "1.10.4"
